finalizada fato vendas

--- a/models/staging/erp/sources.yml
+++ b/models/staging/erp/sources.yml
@@ -16,9 +16,11 @@ sources:
 
       - name: product
         description: tabela fonte com informações dos produtos da Northwind
-
       - name: category
         description: tabela fonte com informações das categorias de produtos da Northwind
-
       - name: supplier
+        description: tabela fonte com informações dos fornecedores da Northwind
+      - name: _order_
+        description: tabela fonte com informações dos fornecedores da Northwind
+      - name: orderdetail
         description: tabela fonte com informações dos fornecedores da Northwind
